package network.message;

public enum Chess {
    Large,
    Medium,
    Small
}
