package network.message;

public class GameResult extends MessageObject{
    public GameResult(){
        super(MessageType.GAME_RESULT);
    }
}
