package network.message;

public enum MessageType {
    CONNECT, ACTION, GAME_RESULT, ROOM_INFO, GAME_REMAINING
}
